# uni_ai

./: .gitignore  README.md
aip/assignment0/: CMakeLists.txt
aip/assignment0/shared_tests/: grading_helpers.h
aip/assignment0/src/: helpers.h  main.cpp  your_code_here.h
aip/assignment0/student_tests/: CMakeLists.txt  cpp_tests.h
aip/assignment1/: .gitignore  CMakeLists.txt
aip/assignment1/data/: memorial2_half.hdr
aip/assignment1/framework/: CMakeLists.txt
aip/assignment1/framework/include/framework/: image.h
aip/assignment1/framework/src/: image.cpp
aip/assignment1/shared_tests/: grading_helpers.h
aip/assignment1/shared_tests/data/: credits.txt  kitchen_probe.hdr
aip/assignment1/src/: helpers.h  main.cpp  your_code_here.h
aip/assignment1/student_tests/: CMakeLists.txt  cpp_tests.h  main.cpp
dme/asg1/: Assignment_part1 V2.ipynb
dme/asg1/lake12/: table_10.csv  table_13.csv  table_14.csv  table_15.csv  table_4.csv  table_6.csv
dme/asg2/Visualization/: Visualization.ipynb
mdl/: .gitignore  2025_Assignment_3 ✅.ipynb  2025_Assignment_4 ✅.ipynb  Assignment_6(ML) ✅.ipynb  Assignment_7(ML).ipynb  Assignment_8(DL) ✅.ipynb  mnist1d_data.pkl  objectives.txt
rbd/: rbd_functies.py
rbd/asg5/: asg5.py
set/assignment1/: README.md  metamorphic_tests.ipynb  models.ipynb  partitioning_tests.ipynb
set/assignment1/model/: model_1.onnx
